--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,7 @@
 <h1>
     <%=  "#{@player1} vs #{@player2}" %> 
 </h1>
+
+<h1> 
+     <%= "#{@player1}, youre fighting #{@player2} who has 10hp remaining!" %> 
+</h1>
